doc/kubernetes/deployment.yml
# config map
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-toolbox-webserver
  labels:
    app: integration-toolbox-webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: integration-toolbox-webserver
  template:
    metadata:
      labels:
        app: integration-toolbox-webserver
    spec:
      restartPolicy: Always
      containers:
        - name: itw
          image: kanshiroron/integration-toolbox-webserver #:0.1.0
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              add: ["NET_RAW"] # for the /ping endpoint to work
          ports:
          - containerPort: 8080
            protocol: TCP
            name: http
          # resources:
          #   requests:
          #     memory: "64Mi"
          #     cpu: "250m"
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          startupProbe:
            httpGet:
              path: /started
              port: http
              scheme: HTTP # HTTPS if TLS is enabled
          livenessProbe:
            httpGet:
              path: /alive
              port: http
              scheme: HTTP # HTTPS if TLS is enabled
          readinessProbe:
            httpGet:
              path: /ready
              port: http
              scheme: HTTP # HTTPS if TLS is enabled

# service
---
kind: Service
apiVersion: v1
metadata:
  name: integration-toolbox-webserver
  labels:
    app: integration-toolbox-webserver
spec:
  selector:
    app: integration-toolbox-webserver
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
