doc/kubernetes/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: integration-toolbox-webserver
  labels:
    app: integration-toolbox-webserver
  annotations:
    # nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  ingressClassName: my-internal-ingress-class-name
  rules:
  - host: itw.example.com
    http:
      paths:
      - backend:
          service:
            name: integration-toolbox-webserver
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - itw.example.com
    secretName: itw.example.com
